feat(preventive-works): добавлен обработчик POST для добавления нового события Добавлена документация к нему Исправлена функция AddNewEvent, теперь id события вычисляется автоматически
