# preventive-works/docs/swagger.yaml
@@ -78,6 +78,56 @@ paths:
       summary: отображение профилактической работы по id
       tags:
       - PreventiveWork
+  /{id}/new_event:
+    put:
+      parameters:
+      - description: id профилактической работы
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Статус события
+        in: formData
+        name: status
+        required: true
+        type: string
+      - description: Дата создания события
+        in: formData
+        name: create_at
+        required: true
+        type: string
+      - description: Дата окончания события
+        in: formData
+        name: deadline
+        required: true
+        type: string
+      - description: Описание события
+        in: formData
+        name: description
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+      summary: добавление новой профилактической работы
+      tags:
+      - NewPreventiveWork
+  /event:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Event'
+            type: array
+      summary: отображение всех профилактических работ
+      tags:
+      - Event
   /new_work:
     post:
       parameters:
