# preventive-works/internal/handlers/handler.go
@@ -28,6 +28,7 @@ func (h *handler) Register(router *gin.Engine) {
 	router.GET("/preventive_works", h.ShowPreventiveWorks)
 	router.GET("/preventive_works/:id", h.ShowPreventiveWork)
 	router.POST("/preventive_works/new_work", h.NewPreventiveWork)
+	router.PUT("/preventive_works/:id/new_event", h.NewEvent)
 
 	docs.SwaggerInfo.Title = "preventive-works"
 	docs.SwaggerInfo.Description = "API для отслеживания профилактических работ"
@@ -102,5 +103,39 @@ func (h *handler) NewPreventiveWork(c *gin.Context) {
 		c.Status(http.StatusBadRequest)
 	}
 	h.ds.AddNewPreventiveWork(nameService, createAt, deadline, title, description)
+	c.Status(http.StatusOK)
+}
+
+// NewEvent
+// @Tags         NewPreventiveWork
+// @Summary      добавление новой профилактической работы
+// @Param        id   path      int  true  "id профилактической работы"
+// @Param        status    formData     string  true  "Статус события"
+// @Param        create_at    formData     string  true  "Дата создания события"
+// @Param        deadline    formData     string  true  "Дата окончания события"
+// @Param        description    formData     string  true  "Описание события"
+// @Success      200
+// @Router       /{id}/new_event [put]
+func (h *handler) NewEvent(c *gin.Context) {
+	//idEvent int, idPreventiveWork int, createAt time.Time, deadline time.Time, description string, status string
+	id, err := strconv.Atoi(c.Param("id"))
+	if err != nil {
+		c.Status(http.StatusBadRequest)
+		return
+	}
+	status := c.PostForm("status")
+	createAtString := c.PostForm("create_at")
+	deadlineSTring := c.PostForm("deadline")
+	description := c.PostForm("description")
+
+	createAt, err := time.Parse("2006-01-02 15:04:05", createAtString)
+	if err != nil {
+		c.Status(http.StatusBadRequest)
+	}
+	deadline, err := time.Parse("2006-01-02 15:04:05", deadlineSTring)
+	if err != nil {
+		c.Status(http.StatusBadRequest)
+	}
+	h.ds.AddNewEvent(id, createAt, deadline, description, status)
 	c.Status(http.StatusOK)
 }
